[metadata]
name = ct2vl-stilahill
version = 0.0.1
author = Elliot Hill, Ramy Arnaout, Cody Callahan
author_email = rarnaout@bidmc.harvar.edu
description = A small package that converts Ct values from PCR reactions to viral loads
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Elliot-D-Hill/ct2vl
project_urls =
    Bug Tracker = https://github.com/Elliot-D-Hill/ct2vl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
