[metadata]
name = ct2vl-stillahill
version = 0.0.1
author = Elliot Hill, Ramy Arnaout, Cody Callahan
author_email = rarnaout@bidmc.harvar.edu
description = A small package that converts SARS-CoV-2 PCR reaction Ct values to viral loads
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Elliot-D-Hill/ct2vl
project_urls =
    Bug Tracker = https://github.com/Elliot-D-Hill/ct2vl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires=
   pandas>=1.3.5
   numpy>=1.22.0
   scipy>=1.8.0
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
